# canonical-cla

./: .env  .gitignore  .pre-commit-config.yaml  Caddyfile  DEVELOPING.md  README.md  alembic.ini  docker-compose.yaml  grafana-ds.yaml  log.ini  pyproject.toml  requirements.txt  rockcraft.yaml  tempo.yaml  test.txt
.github/workflows/: pr.yaml  publish-rock.yaml  test.yaml
app/: config.py  database.py  docs.py  http_client.py  logging.py  main.py  middlewares.py  models.py  opentelemtry.py  test_http_client.py  test_utils.py  utils.py
app/cla/: email_providers.py  email_utils.py  excluded_emails.py  models.py  routes.py  service.py  test_routes.py  test_service.py
app/database/: connection.py  models.py
app/emails/: email_utils.py
app/github/: cookies.py  models.py  routes.py  service.py  test_routes.py  test_service.py  test_webhook_service.py  webhook_service.py
app/launchpad/: cookies.py  literals.py  login_adapter.py  models.py  routes.py  service.py  test_login_adapter.py  test_routes.py  test_service.py
app/notifications/: emails.py
app/oidc/: cookies.py  models.py  permissions.py  routes.py  service.py  test_routes.py  test_service.py
app/repository/: excluded_project.py  individual.py  organization.py  user_role.py
app/security/: config.py  rate_limiter.py  test_rate_limiter.py
app/utils/: api_cookie.py  base64.py  crypto.py  open_redirects.py  request.py  test_api_cookie.py  test_base64.py  test_crypto.py  test_open_redirects.py  test_request.py  trusted_websites.py
migrations/: env.py  script.py.mako
migrations/versions/: 05d07809911e_remove_audit_entity_id_field.py  220d3b676fc1_added_organization_table.py  294c6329e132_org_add_contact_job_title.py  4287dbc4c8a5_individual_remove_phone_number.py  47c1575bd0b8_ind_remove_unique_email.py  5b6373e08cac_add_organization_table.py  5ddd92d15c8f_add_mandatory_reason_to_excluded_project.py  (+13 more)
scripts/: app_start_dev.py  audit_logs.py  check.py  common.py  create_admin.py  debug_production.py  edit_user_role.py  format.py  format_project.py  format_templates.py  import_contributors.py  interactive_shell.py  migration.py  remove_old_contributors.py  setup.py  unit_test.py
src/: cli.py  config.py  connect_db.py  database.py  main.py
(+15 files in other folders)
