[tool.poetry]
name = "canonical-cla"
version = "1.0.0-alpha"
description = "Canonical Contribution Licence Agreement (CLA) Service."
homepage = "https://cla.canonical.com"
documentation = "https://cla.canonical.com/docs"
repository = "https://github.com/canonical/canonical-cla"
authors = ["Goulin Khoge <goulin.khoge@canonical.com>"]
license = "Apache-2.0"

packages = [{ include = "scripts" }]

[tool.poetry.scripts]
dev = "scripts.app_start_dev:run"
format = "scripts.format:run"
check = "scripts.check:run"
test = "scripts.unit_test:run"
migrate = "scripts.migration:run"
setup = "scripts.setup:run"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.1"
asyncpg = "0.29.0"
sqlalchemy = { extras = ["postgresql-asyncpg"], version = "^2.0.32" }
alembic = "1.13.2"
redis = "5.0.8"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
pydantic-extra-types = "2.9.0"
pycountry = "24.6.1"
python-dateutil = "2.9.0"
pycryptodome = "3.20.0"
httpx = "0.27.0"
validators = "^0.33.0"
jinja2 = "^3.1.4"
bleach = "^6.1.0"
python-multipart = "^0.0.9"
prometheus-fastapi-instrumentator = "^7.0.0"
python-json-logger = "^3.2.1"
opentelemetry-instrumentation-logging = "^0.51b0"
gidgethub = { extras = ["httpx"], version = "^5.4.0" }
sentry-sdk = { extras = [
    "asyncpg",
    "fastapi",
    "httpx",
    "redis",
    "sqlalchemy",
], version = "^2.48.0" }
ipython = "^8.38.0"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
coverage = "^7.6.1"
djlint = "^1.34.1"
pre-commit = "^3.7.0"
ruff = "^0.14.12"
ty = "^0.0.14"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # errors on each Depends(..) which is part of the FastAPI dependency injection system
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
